--- a/ui/src/components/NavBarCSS.module.css
+++ b/ui/src/components/NavBarCSS.module.css
@@ -10,7 +10,6 @@ MOBILE PROBLEMS:
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    z-index: 10000000;
 }
 
 .main {
@@ -21,7 +20,7 @@ MOBILE PROBLEMS:
 }
 
 .container {
-    z-index: 1000000;
+    z-index: 100000;
     position: fixed;
     display: flex;
     justify-content: space-between;
@@ -75,13 +74,13 @@ MOBILE PROBLEMS:
 }
 
 .logo {
+    z-index: 100000;
     position: absolute;
     width: auto;
     transition: all .5s;
 }
 
 .logoHero {
-    z-index: 100000;
     height: 20vw;
     transform: translate(40vw, 15vw) rotate(-10deg);
     filter: drop-shadow(7px 7px rgba(183, 35, 35, 1));
@@ -95,14 +94,14 @@ MOBILE PROBLEMS:
 }
 
 .menuButton {
+    z-index: 1000000;
     display: none;
 }
 
 .navDrop {
-    z-index: 1000000;
+    z-index: 1000000000;
     position: fixed;
     margin-top: 54px;
-    z-index: 10;
 }
 
 .navDrop ul {
@@ -158,7 +157,7 @@ MOBILE PROBLEMS:
         position: fixed;
         height: 25px;
         width: auto;
-        transform: translate(92vw, 15px);
+        transform: translate(90vw, 15px);
     }
 }
 
